# angle-refcnt-dbg

./: README.md
ErichDonGubler/: Cargo.toml  README.md
ErichDonGubler/angle-rebase/: antileak.kdl  config.toml  vs-output-window-old.txt  vs-output-window.txt
ErichDonGubler/nical/: README.md
ErichDonGubler/src/: config.rs  event_log.rs  lib.rs  main.rs  matcher.rs  next.md  platform.rs  spanned.rs  state_machine.rs
ErichDonGubler/src/platform/: windows.rs
ErichDonGubler/src/snapshots/: antileak__parse_call_stack.snap
nical/: Cargo.toml  README.md  count.sh  event_annotations.txt  renamed_frames.txt  skipped_frames.txt  skipped_subtrees.txt  tree.sh
nical/src/: main.rs
nical/tmp/: erich-tree.txt  erich-vs-dump.txt  tree.txt  vs-dump.txt
