[package]
name = "antileak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
arcstr = "1.1.5"
ariadne = "0.1.5"
chumsky = "0.8.0"
clap = { version = "4.0.32", features = ["derive"] }
custom_debug = "0.5.0"
env_logger = "0.10.0"
format = "0.2.4"
knuffel = "2.0.0"
log = "0.4.17"
miette = { version = "*", features = ["fancy"] } # should match `knuffel`'s version
once_cell = "1.17.0"
regex = "1.7.0"

[dev-dependencies]
insta = "1.24.1"
