[package]
name = "antileak"
version = "0.1.0"
edition = "2021"

[dependencies]
arcstr = "1.1.5"
ariadne = "0.1.5"
chumsky = "0.8.0"
clap = { version = "4.0.32", features = ["derive"] }
custom_debug = "0.5.0"
env_logger = "0.10.0"
format = "0.2.4"
knuffel = "2.0.0"
log = "0.4.17"
miette = { version = "*", features = ["fancy"] } # should match `knuffel`'s version
once_cell = "1.17.0"
regex = "1.7.0"
thiserror = "1.0.38"

[dev-dependencies]
insta = "1.24.1"
